# TeamOptimisationWithRL

./: .gitignore  README.md  actions.py  agents.py  bitmanipulation.py  compare.py  elucidate_table.py  environment.py  lint  main.py  nklandscapes.py  policy.py  show_table_map.py  train.py
agent/basic/: basic-6100.np  basic.json  basic.np
agent/basic3/: basic3-3500.npz  basic3.json  basic3.npz
agent/comp/: comp.json
agent/endrewardzeros/: endrewardszeros.json
agent/linearpolicy/: linearpolicy.json
agent/onestest/: onestest.json
agent/orig_comp/: orig_comp.json
agents/: policygrad.py  programmed.py  qlearning.py  randomtable.py  shared.py
comparisons/: basic3.json  heuristics.json  linearpolicy.json
configs/example/: compare_qlearn.json  heuristics.json
environment/: __init__.py  actions.py  nklandscapes.py
environment/rustylandscapes/: Cargo.toml
experiments/00_best_lr/: README.md  train
experiments/01_complexity/: README.md  compare  train
experiments/02_training_bias/: README.md  train
experiments/03_training_episodes/: README.md  train
experiments/04_exploration_type/: README.md  train
experiments/05_agent_type/: README.md  train
experiments/06_memory/: README.md  train
experiments/06_memory_lr/: README.md  train
experiments/07_programmed_agent/: README.md
experiments/example/: compare_qlearn.json  heuristics.json
misc/: epsilon.py  graph.py
nklandscapegen/: Cargo.toml
python/: actions.py  agents.py  compare.py  lint  nklandscapes.py  plot_policy.py  policy.py  show_table_map.py  train.py
trained/: simple_agent.json
(+91 files in other folders)
